Реализованы функции для печати текущей директории

--- a/File_System/File_System/File_System.vcxproj
+++ b/File_System/File_System/File_System.vcxproj
@@ -121,6 +121,7 @@
     <ClCompile Include="FileSystem.c" />
     <ClCompile Include="Main.c" />
     <ClCompile Include="Node.c" />
+    <ClCompile Include="Path.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Constants.h" />
